--- a/microsetta_interface/templates/nutrition.jinja2
+++ b/microsetta_interface/templates/nutrition.jinja2
@@ -44,39 +44,43 @@
             preventImplicitSubmission(form_name);
             preclude_whitespace('#ffq_code');
 
-            function handleSubmit() {
-                // TODO go to page since form validated
-                console.log('submitted form')
-            };
+            $("form[name='" + form_name + "']").on('submit', function() {
+                document.getElementById("ffq_code_button").disabled = true;
+            });
 
-            // Validate the registration form for a valid
-            // registration code using the jQuery validation plugin.
-            // If the form is not valid, the messages are displayed
+            // Initialize form validation on the registration form.
+            // It has the name attribute "registration"
             $("form[name='" + form_name + "']").validate({
                 // Specify validation rules
                 rules: {
-                    // The key is the form input field name attribute and the validation rules
-                    // are defined in the value object
-                    // The route check_ffq_code_valid returns
-                    // either true or false
+                    // The key name on the left side is the name attribute
+                    // of an input field. Validation rules are defined
+                    // on the right side
                     ffq_code: {
                         required: true,
                         remote: {
                             url: "/check_ffq_code_valid",
                         }
+                    },
+                    submitHandler: function (form) {
+                        form.submit();
                     }
-                },
-                submitHandler: function (form, event) {
-                    // prevent multiple submissions
-                    document.getElementById("ffq_code_button").disabled = false;
-                    handleSubmit(form);
                 },
                 messages: {
                     ffq_code: "{{ _('Your registration code is not in our system or has already been used. Please try again.') }}",
                 },
             });
-
         });
+
+        /*
+        function updateButtonState(ffq_code_value) {
+            if(ffq_code_value != "") {
+                document.getElementById("ffq_code_button").disabled = false;
+            } else {
+                document.getElementById("ffq_code_button").disabled = true;
+            }
+        }
+        */
 
         function openCodePanel() {
             document.getElementById('add_code_container').style.display = '';
@@ -212,7 +216,7 @@
                             </div>
                         </div>
                         <div class="col-12 text-center mt-4">
-                            <button type="submit" class="btn btn-blue-gradient" name="ffq_code_button" id="ffq_code_button">{{ _('Register FFQ') }}</button>
+                            <button class="btn btn-blue-gradient" name="ffq_code_button" id="ffq_code_button">{{ _('Register FFQ') }}</button>
                         </div>
                     </div>
                 </div>
