--- a/microsetta_interface/templates/kits.jinja2
+++ b/microsetta_interface/templates/kits.jinja2
@@ -199,12 +199,12 @@
     {% else %}
     <div class="container profile-container">
         {% if prompt_survey_update %}
-        <div class="alert alert-primary alert-nutrition mt-4" role="alert">
+        <div class="alert alert-primary alert-kits mt-4" role="alert">
             {{ _('Thank you for logging your sample information. It looks like you haven\'t updated your profile recently. Please review') }} <a href="/accounts/{{account_id}}/sources/{{source_id}}/take_survey?survey_template_id={{prompt_survey_id}}">{{ _('your survey responses') }}</a> {{ _('to ensure they\'re as current and complete as possible.') }}
         </div>
         {% endif %}
         {% if prompt_skin_app %}
-        <div class="alert alert-primary alert-nutrition mt-4" role="alert">
+        <div class="alert alert-primary alert-kits mt-4" role="alert">
             {{ _('You now have access to the Skin Scoring App survey. Please return to the') }} <a href="/accounts/{{account_id}}/sources/{{source_id}}/take_survey?survey_template_id={{prompt_survey_id}}">{{ _('My Profile tab') }}</a> {{ _('to complete it.') }}
         </div>
         {% endif %}
